<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">DragonSSH XHTTP Example</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="authentication">Authentication</string>
    <string name="back_arrow">←</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="channel_description_background">Quiet status notification for the active XHTTP SSH tunnel</string>
    <string name="channel_name_background">XHTTP SSH connection</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_logs">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="compressg">SSH compression enabled</string>
    <string name="conectssh">SSH connection established</string>
    <string name="connection_method">Connection Method</string>
    <string name="copy_logs">Copy</string>
    <string name="current_configuration">Current configuration</string>
    <string name="dataerror">SSH authentication failed</string>
    <string name="disabled">Disabled</string>
    <string name="dns">DNS</string>
    <string name="dns_1">DNS 1</string>
    <string name="dns_2">DNS 2</string>
    <string name="enable_ipv6">Enable IPv6 tunnel</string>
    <string name="enable_udpgw">Enable UDPGW</string>
    <string name="enabled">Enabled</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_dns_primary_required">Enter DNS 1 or disable custom DNS.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_password_required">Enter the SSH password.</string>
    <string name="error_path_required">Enter the XHTTP Path.</string>
    <string name="error_port_invalid">Enter a valid port from 1 to 65535.</string>
    <string name="error_request_permission">VPN permission is required</string>
    <string name="error_server_ip_invalid">Invalid XHTTP endpoint</string>
    <string name="error_server_required">Enter the Server. This is the XHTTP proxy IP or hostname.</string>
    <string name="error_udpgw_invalid">Enter UDPGW as host:port.</string>
    <string name="error_username_required">Enter the SSH user name.</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failedvpn">Failed to start the Android VPN tunnel</string>
    <string name="follow_logs">Follow newest entries</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_subtitle">Minimal XHTTP + SSH client with UDPGW.</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ipv6">IPv6</string>
    <string name="ipv6_help">Route IPv6 through the tunnel. Leave off if your server or network has no working IPv6.</string>
    <string name="item_view_role_description">Tab</string>
    <string name="log_conection_lost">Connection lost</string>
    <string name="log_server_banner">Server banner:</string>
    <string name="logs">Logs</string>
    <string name="logs_copied">Logs copied to the clipboard.</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_loading_indicator_content_description">Loading</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0, 0, 0.2, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0, 0, 1)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0, 1, 1)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0, 0, 0, 1)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end</string>
    <string name="material_slider_range_start">Range start</string>
    <string name="material_slider_value">Value</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_button_collapsed_content_description">Collapsed</string>
    <string name="mtrl_button_expanded_content_description">Expanded</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="mtrl_checkbox_button_icon_path_name">icon path</string>
    <string name="mtrl_checkbox_button_path_checked">M23,7H9C7.9,7,7,7.9,7,9v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9C25,7.9,24.1,7,23,7z</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="save">SAVE</string>
    <string name="server">Server</string>
    <string name="server_help">The XHTTP proxy IP or hostname.</string>
    <string name="settings">Settings</string>
    <string name="sni">SNI</string>
    <string name="sni_help_simple">TLS hostname, for example app.example.com.</string>
    <string name="ssh_tunnel">SSH Tunnel</string>
    <string name="start">START</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="tls_mode">TLS MODE</string>
    <string name="tls_mode_automatic">Automatic (TLS 1.3 preferred)</string>
    <string name="udpgw">UDPGW</string>
    <string name="udpgw_address">UDPGW host:port</string>
    <string name="udpgw_help_simple">Example: 127.0.0.1:7300</string>
    <string name="use_custom_dns">Use custom DNS</string>
    <string name="username">User name</string>
    <string name="vpn_udpgw">VPN / UDPGW</string>
    <string name="xhttp">XHTTP</string>
    <string name="xhttp_host">XHTTP Host</string>
    <string name="xhttp_host_help_simple">Host used by your XHTTP server or CDN.</string>
    <string name="xhttp_path">XHTTP Path</string>
    <string name="xhttp_path_help_simple">Example: /ssh</string>
    <string name="xhttp_ssh">XHTTP + SSH</string>
    <string name="xhttp_tls">XHTTP TLS</string>
</resources>